--- a/style.css
+++ b/style.css
@@ -1,75 +1,29 @@
-#token-hud .vision-5e.vision-modes {
-    visibility: hidden;
-    position: absolute;
-    top: -1px;
-    right: -10px;
-    transform: translate(100%, 0);
-    display: block;
-    padding: 0;
-    box-sizing: content-box;
+#token-hud .palette[data-palette="vision-5e.visionModes"] {
+    display: flex;
+    flex-direction: column;
     width: auto;
-    min-width: 100px;
-    max-width: var(--vision-modes-width);
-    background: rgba(0, 0, 0, 0.6);
-    box-shadow: 0 0 15px var(--color-shadow-dark);
-    border: 1px solid var(--color-border-dark-3);
-    border-radius: 4px;
-    pointer-events: all;
-    font-size: var(--font-size-14);
-    color: var(--color-text-light-3);
-}
-
-#token-hud .vision-5e.vision-modes.active {
-    visibility: visible;
-}
-
-#token-hud .vision-5e.vision-mode {
-    line-height: 20px;
-    margin: 2px;
-    padding: 1px 6px;
-    border: 1px solid transparent;
-    border-radius: 4px;
-    opacity: 0.75;
-}
-
-#token-hud .vision-5e.vision-mode:hover {
-    color: var(--color-text-light-1);
-    opacity: 1;
-}
-
-#token-hud .vision-5e.vision-mode.active {
-    border: 1px solid var(--color-border-highlight);
-    opacity: 1;
-}
-
-#token-hud .vision-5e.vision-mode-label {
-    flex: 1;
+    min-width: 140px;
+    padding: 3px;
+    gap: 3px;
     text-align: left;
-    overflow: hidden;
-    white-space: nowrap;
-    word-break: break-all;
-    padding-right: 14px;
-}
+    font-size: var(--font-size-13);
+    color: var(--control-icon-color);
 
-#token-hud .control-icon[data-action="vision-mode"] {
-    position: relative;
-}
+    >a {
+        flex: 1;
+        border: 1px solid transparent;
+        border-radius: 3px;
+        padding: 3px;
+        white-space: nowrap;
 
-#token-hud .control-icon[data-action="vision-mode"]>i[class^="fa"] {
-    display: block;
-    width: 36px;
-    height: 36px;
-    margin: 2px;
-    top: 0;
-    padding: 0;
-    line-height: 36px;
-    color: var(--color-text-light-3);
-}
+        &:hover {
+            color: var(--control-hover-icon-color);
+            border-color: var(--control-hover-border-color);
+        }
 
-#token-hud .control-icon[data-action="vision-mode"]>i[class^="fa"]:hover {
-    color: var(--color-text-light-1);
-}
-
-.illandril-token-hud-scale--darken-hud-button-bg #token-hud .vision-5e.vision-modes {
-    background: rgba(0, 0, 0, 0.8);
+        &.active {
+            color: var(--control-active-icon-color);
+            border-color: var(--control-active-border-color);
+        }
+    }
 }
